--- a/index.qmd
+++ b/index.qmd
@@ -20,7 +20,6 @@ Join us this December for a series of online sessions sharing knowledge and outc
 ::: {.author}
 *Brought to you by the PSSI Science Implementation Team and DFO Science Pacific Region*
 :::
-:::
 
 ## 🗓️ December 2025 Calendar Overview
 
@@ -86,7 +85,7 @@ Join us this December for a series of online sessions sharing knowledge and outc
 ## 📅 December 02, 2025
 </div>
 
-###Salmon In A Changing Climate
+### Salmon In A Changing Climate
 Improving our understanding of the long-term implications of climate change for Pacific Salmon and their ecosystems.
 
 **Time:** 10AM-12PM  
@@ -101,7 +100,7 @@ Improving our understanding of the long-term implications of climate change for 
 - **11:15 AM** - 🌊 [Changing coastal productivity: Using sediment cores, water properties and archived plankton data to identify changes at the bottom of the food web in BC’s coastal waters](pages/pssi/2406.html) | Sophia Johannessen | DFO
 - **11:30 AM** - 🌱 [Evaluating climate change scenarios for the Quesnel Watershed to determine flood, fire and temperature risks posed to Upper Fraser salmon stocks.](pages/bcsrif/BCSRIF_2022_399.html) | Ellen Petticrew | University of Northern British Columbia, Department of Geography, Earth and Environmental Sciences
 
-###Freshwater Stressors
+### Freshwater Stressors
 Mechanistic, physiological, and quantitative studies for evaluating stressors to freshwater habitats of Pacific salmon, including cumulative stressors.
 
 **Time:** 1PM-3PM  
@@ -123,24 +122,26 @@ coastal BC.](pages/bcsrif/BCSRIF_2022_449.html) | Maria Kuruvilla | Salmon Coast
 ## 📅 December 04, 2025
 </div>
 
-###Follow The Fish
+### Follow The Fish
 A review of the Follow the Fish Program, including methods and approaches for life cycle assessment of WCVI Chinook and ecosystem-scale research programs.
 
 **Time:** 10AM-12PM  
 **Location:** Institute of Ocean Sciences (IOS), Sidney  
-**Chair:** Isobel Pearsall
+**Chair:** Isobel Pearsall  
+[Join Webinar](https://events.teams.microsoft.com/event/038709c6-a551-4faa-8957-8f56a8b7f32b@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
 
 - **10:15 AM** - 🌊 [Follow the Fish: An integrated Chinook salmon assessment and monitoring program for the West Coast of Vancouver Island](pages/pssi/2407.html) | Jessy Bokvist | DFO
 - **10:30 AM** - 🌊 [Identifying good practices for considering Indigenous Knowledge in Rebuilding Plan targets and stock assessment reference poi](pages/pssi/2397.html) | Jared Dick, Carrie Holt | Nuu-Chah-Nulth Tribal Council
 - **10:45 AM** - 🌊 [Innovative Ecosystem Based Approaches to identify cumulative stressors: Salmon Fit-Chips and eDNA](pages/pssi/2447.html) | Christoph Deeg, Arthur Bass | DFO
 - **11:15 AM** - 🌊 [Development and application of laser ablation-inductively coupled plasma-mass spectrometry (LA-ICP-MS) to determine saltwater entry size of juvenile salmonids and track habitat usage.](pages/pssi/2422.html) | Nicole LaForge, Micah Quindazzi  | DFO
 
-###Marine Stressors
+### Marine Stressors
 Research on stressors in nearshore marine ecosystems and their effects on salmon survival.
 
 **Time:** 1PM-3PM  
 **Location:** Institute of Ocean Sciences (IOS), Sidney  
-**Chair:** Cameron Freshwater
+**Chair:** Cameron Freshwater  
+[Join Webinar](https://events.teams.microsoft.com/event/038709c6-a551-4faa-8957-8f56a8b7f32b@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
 
 - **1:15 PM** - 🌊 [Improving baseline knowledge of environmental conditions in Vancouver Islands fjords through observations and modelling, with a focus on hypoxia dynamics, climate change, and the potential implications for Pacific salmon](pages/pssi/2404.html) | Laura Bianucci, Marilena Geng | DFO
 - **1:30 PM** - 🌊 [Investigation of the impacts of singular and coinciding acute climate stressors on the nutritional quality of the pteropod Limacina helicina, a juvenile Pacific salmon dietary species](pages/pssi/2412.html) | Chris Pearce | DFO
@@ -154,7 +155,7 @@ Research on stressors in nearshore marine ecosystems and their effects on salmon
 ## 📅 December 09, 2025
 </div>
 
-###Fisheries Monitoring And Harvest Methods
+### Fisheries Monitoring And Harvest Methods
 Projects piloting new methods for selective salmon harvest and informing fisheries management decisions through improved monitoring.
 
 **Time:** 10AM-12PM  
@@ -167,7 +168,7 @@ Projects piloting new methods for selective salmon harvest and informing fisheri
 - 🌊 [Quantifying Yukon Chinook migration mortality and its implications for fisheries management and rebuilding under the Fish Stock Provisions of the Fisheries Act](pages/pssi/2402.html) | Brendan Connors, Adam O'Dell | DFO
 - 🌱 [Selective Fishing Using a Salmon Trap in the Campbell River Estuary](pages/bcsrif/BCSRIF_2022_347.html) | Derek Leboeuf | A-Tlegay Fisheries Society
 
-###Data And Modelling To Support Decision Making
+### Data And Modelling To Support Decision Making
 Databases, analytic tools, and modelling projects that provide information to support decision-making for salmon conservation and management
 
 **Time:** 1PM-3PM  
@@ -186,7 +187,7 @@ Databases, analytic tools, and modelling projects that provide information to su
 ## 📅 December 11, 2025
 </div>
 
-###Hatchery Fitness And Genetics
+### Hatchery Fitness And Genetics
 Research on the genetic and fitness consequences of hatchery enhancment, and the interactions between hatchery and wild salmon.
 
 **Time:** 10AM-12PM  
@@ -203,7 +204,7 @@ Research on the genetic and fitness consequences of hatchery enhancment, and the
 - 🌊 [Relative reproductive success of hatchery- versus natural-origin salmon in Canadian integrated populations](pages/pssi/2451.html) | Eric Rondeau, Tim Healy, Kyle Wellband | DFO
 - 🌱 [Science-based review of hatchery results in the DFO Pacific Region](pages/bcsrif/BCSRIF_2019_136.html) | Samantha James | Pacific Salmon Foundation
 
-###Fish Health
+### Fish Health
 Tools and research to support monitoring and managing the health of cultured salmon.
 
 **Time:** 1PM-3PM  
