--- a/pages/bcsrif/BCSRIF_2019_040-136D.qmd
+++ b/pages/bcsrif/BCSRIF_2019_040-136D.qmd
@@ -15,5 +15,5 @@ toc: true
 **Presentation Date(s):** December 04, 2025  
 **Speakers:** Samantha James  
 **Abstract:**  
-The goal of this project is to determine the causes of vateritic otolith development (ear bones that have crystalized resulting in hearing loss) in hatchery-reared Strait of Georgia coho salmon to investigate the consequences for survival and in turn population recovery.   
+No abstract available   
 
