--- a/pages/pssi/2394.qmd
+++ b/pages/pssi/2394.qmd
@@ -21,6 +21,6 @@ Groundfish trawls (non-salmon) are prohibited from selling or trading salmon byc
 <iframe src="../../data/PSSI_bulletin/2394.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📥 Download PDF](../../data/PSSI_bulletin/2394.pdf){.btn .btn-primary target="_blank"}
+[📅 Download PDF](../../data/PSSI_bulletin/2394.pdf){.btn .btn-primary target="_blank"}
 </p>
 
