--- a/pages/pssi/2397.qmd
+++ b/pages/pssi/2397.qmd
@@ -21,6 +21,6 @@ Indigenous knowledge includes countless generations of place-based Pacific salmo
 <iframe src="../../data/PSSI_bulletin/2397.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📥 Download PDF](../../data/PSSI_bulletin/2397.pdf){.btn .btn-primary target="_blank"}
+[📅 Download PDF](../../data/PSSI_bulletin/2397.pdf){.btn .btn-primary target="_blank"}
 </p>
 
