--- a/pages/pssi/2402.qmd
+++ b/pages/pssi/2402.qmd
@@ -21,6 +21,6 @@ Yukon River Chinook numbers have been declining and a questionable proportion of
 <iframe src="../../data/PSSI_bulletin/2402.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📥 Download PDF](../../data/PSSI_bulletin/2402.pdf){.btn .btn-primary target="_blank"}
+[📅 Download PDF](../../data/PSSI_bulletin/2402.pdf){.btn .btn-primary target="_blank"}
 </p>
 
