--- a/pages/pssi/2404.qmd
+++ b/pages/pssi/2404.qmd
@@ -21,6 +21,6 @@ Low-oxygen (hypoxia) conditions have been observed near the surface in salmon mi
 <iframe src="../../data/PSSI_bulletin/2404.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📥 Download PDF](../../data/PSSI_bulletin/2404.pdf){.btn .btn-primary target="_blank"}
+[📅 Download PDF](../../data/PSSI_bulletin/2404.pdf){.btn .btn-primary target="_blank"}
 </p>
 
