--- a/pages/pssi/2405.qmd
+++ b/pages/pssi/2405.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Biological models to support prioritizing salmon stocks under future climates"
+title: "Insights into the effects of marine and freshwater variables on salmon population dynamics: A hierarchical lifecycle approach"
 output-file: "2405.html"
 Leads: "Patrick Thompson, Cameron Freshwater, Brendan Connors, Josie Iacarella, "
 toc: true
@@ -16,11 +16,14 @@ toc: true
 **Abstract:**  
 Predicting how salmon stocks respond to climate change is difficult because salmon life stages span diverse habitats seasonally. This modelling project studies the relationships between salmon survival and environmental data in freshwater and marine habitats, then applies those relationships to more specific stocks with less available information.  By modelling these relationships across all salmon stocks, decision-makers are better able to predict the state of salmon stocks under a variety of climate change scenarios.   
 
+**Authors:**  
+Jan Finke, Travis Tai, Amber Holdsworth, Josie Iacarella, Dan Selbie, Greig Oldford, Howard Stiff, Brendan Connors, Cameron Freshwater and Patrick Thompson  
+
 ## Project Bulletin
 
 <iframe src="../../data/PSSI_bulletin/2405.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📥 Download PDF](../../data/PSSI_bulletin/2405.pdf){.btn .btn-primary target="_blank"}
+[📅 Download PDF](../../data/PSSI_bulletin/2405.pdf){.btn .btn-primary target="_blank"}
 </p>
 
