--- a/pages/pssi/2406.qmd
+++ b/pages/pssi/2406.qmd
@@ -8,7 +8,7 @@ toc: true
 ## PSSI Project Summary
 
 **Division:** Ocean Sciences (OSD)  
-**Section:** Ecology and Biogeochemistry   
+**Section:** Ecology and Biogeochemistry  
 **Organization:** DFO  
 **Session(s):** Salmon In A Changing Climate  
 **Presentation Date(s):** December 02, 2025  
@@ -21,6 +21,6 @@ Has climate change reduced the amount of plankton at the bottom of the food web 
 <iframe src="../../data/PSSI_bulletin/2406.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📥 Download PDF](../../data/PSSI_bulletin/2406.pdf){.btn .btn-primary target="_blank"}
+[📅 Download PDF](../../data/PSSI_bulletin/2406.pdf){.btn .btn-primary target="_blank"}
 </p>
 
