--- a/pages/pssi/2408.qmd
+++ b/pages/pssi/2408.qmd
@@ -21,6 +21,6 @@ Salmon disease testing methods have greatly expanded in the last decade resultin
 <iframe src="../../data/PSSI_bulletin/2408.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📥 Download PDF](../../data/PSSI_bulletin/2408.pdf){.btn .btn-primary target="_blank"}
+[📅 Download PDF](../../data/PSSI_bulletin/2408.pdf){.btn .btn-primary target="_blank"}
 </p>
 
