--- a/pages/pssi/2412.qmd
+++ b/pages/pssi/2412.qmd
@@ -21,6 +21,6 @@ Ocean warming and acidic upwelling changes the zooplankton food web for young sa
 <iframe src="../../data/PSSI_bulletin/2412.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📥 Download PDF](../../data/PSSI_bulletin/2412.pdf){.btn .btn-primary target="_blank"}
+[📅 Download PDF](../../data/PSSI_bulletin/2412.pdf){.btn .btn-primary target="_blank"}
 </p>
 
