--- a/pages/pssi/2416.qmd
+++ b/pages/pssi/2416.qmd
@@ -8,7 +8,7 @@ toc: true
 ## PSSI Project Summary
 
 **Division:** Ocean Sciences (OSD)  
-**Section:** Ecology and Biogeochemistry   
+**Section:** Ecology and Biogeochemistry  
 **Organization:** DFO  
 **Session(s):** Marine Stressors  
 **Presentation Date(s):** December 04, 2025  
@@ -22,6 +22,6 @@ We are comparing biotoxin levels with environmental conditions and indicators of
 <iframe src="../../data/PSSI_bulletin/2416.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📥 Download PDF](../../data/PSSI_bulletin/2416.pdf){.btn .btn-primary target="_blank"}
+[📅 Download PDF](../../data/PSSI_bulletin/2416.pdf){.btn .btn-primary target="_blank"}
 </p>
 
