--- a/pages/pssi/2417.qmd
+++ b/pages/pssi/2417.qmd
@@ -21,6 +21,6 @@ Hatchery feeds often come from commercial sources focused on other fish species 
 <iframe src="../../data/PSSI_bulletin/2417.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📥 Download PDF](../../data/PSSI_bulletin/2417.pdf){.btn .btn-primary target="_blank"}
+[📅 Download PDF](../../data/PSSI_bulletin/2417.pdf){.btn .btn-primary target="_blank"}
 </p>
 
