--- a/pages/pssi/2447.qmd
+++ b/pages/pssi/2447.qmd
@@ -12,7 +12,7 @@ toc: true
 **Organization:** DFO  
 **Session(s):** Follow The Fish  
 **Presentation Date(s):** December 04, 2025  
-**Speakers:** Christoph Deeg, Arthur Bass  
+**Speakers:** Arthur Bass, Christoph Deeg  
 **Abstract:**  
 Salmon experience a variety of physiological stressors and pathogens over migration which can be monitored non-lethally using Fit-Chip technology. Chinook salmon will expose themselves to potentially impactful stressors to avail feeding opportunities, enhancing vulnerability to cumulative stressors. eDNA data resolves habitat usage for Chinook salmon and demonstrating they associate with high biomass areas (prey availability), including aquaculture facilities, and avoid harmful algae. Models addressing the cumulative and synergistic interplay between factors will inform which levers under human control will result in strongest outcomes for salmon.   
 
@@ -21,6 +21,6 @@ Salmon experience a variety of physiological stressors and pathogens over migrat
 <iframe src="../../data/PSSI_bulletin/2447.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📥 Download PDF](../../data/PSSI_bulletin/2447.pdf){.btn .btn-primary target="_blank"}
+[📅 Download PDF](../../data/PSSI_bulletin/2447.pdf){.btn .btn-primary target="_blank"}
 </p>
 
