--- a/pages/pssi/2451.qmd
+++ b/pages/pssi/2451.qmd
@@ -21,6 +21,6 @@ Salmon bred from a hatchery are often less fit in wild environments than natural
 <iframe src="../../data/PSSI_bulletin/2451.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📥 Download PDF](../../data/PSSI_bulletin/2451.pdf){.btn .btn-primary target="_blank"}
+[📅 Download PDF](../../data/PSSI_bulletin/2451.pdf){.btn .btn-primary target="_blank"}
 </p>
 
