--- a/pages/pssi/2453.qmd
+++ b/pages/pssi/2453.qmd
@@ -21,6 +21,6 @@ There are few genetic differences between hatchery-bred and natural salmon in po
 <iframe src="../../data/PSSI_bulletin/2453.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📥 Download PDF](../../data/PSSI_bulletin/2453.pdf){.btn .btn-primary target="_blank"}
+[📅 Download PDF](../../data/PSSI_bulletin/2453.pdf){.btn .btn-primary target="_blank"}
 </p>
 
