--- a/pages/pssi/2493.qmd
+++ b/pages/pssi/2493.qmd
@@ -21,6 +21,6 @@ Models of landscape-scope watershed assessments often can’t capture accurate s
 <iframe src="../../data/PSSI_bulletin/2493.pdf" width="100%" height="800px" style="border: 1px solid #ccc; border-radius: 4px;"></iframe>
 
 <p style="text-align: center; margin-top: 10px;">
-[📥 Download PDF](../../data/PSSI_bulletin/2493.pdf){.btn .btn-primary target="_blank"}
+[📅 Download PDF](../../data/PSSI_bulletin/2493.pdf){.btn .btn-primary target="_blank"}
 </p>
 
