--- a/pages/pssi/2546.qmd
+++ b/pages/pssi/2546.qmd
@@ -14,6 +14,6 @@ toc: true
 **Presentation Date(s):** December 09, 2025  
 **Speakers:** Shelee Hamilton  
 **Abstract:**  
-No abstract available   
+No abstract available.   
 
 
