--- a/pages/bcsrif/BCSRIF_2022_401.qmd
+++ b/pages/bcsrif/BCSRIF_2022_401.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Supporting and connecting community-based monitoring for climate-resilient salmon ecosystems"
+title: "Supporting Climate-Resilient Salmon Ecosystems: from Modelling to Monitoring"
 output-file: "BCSRIF_2022_401.html"
 Leads: "Pacific Salmon Foundation"
 toc: true
