--- a/pages/bcsrif/BCSRIF_2022_384.qmd
+++ b/pages/bcsrif/BCSRIF_2022_384.qmd
@@ -10,7 +10,7 @@ toc: true
 **Species Group:** Pacific Salmon  
 **Location:** Coastal British Columbia and Fraser basin  
 **Partners:** Fisheries and Oceans Canada  
-**Organization:** Not specified  
+**Organization:** Pacific Climate Impacts Consortium  
 **Session(s):** Salmon In A Changing Climate  
 **Presentation Date(s):** December 02, 2025  
 **Speakers:** Markus Schnorbus  
