--- a/pages/pssi/2442.qmd
+++ b/pages/pssi/2442.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Graduate Research into 1) habitat use by juvenile Chinook Salmon in the Canadian Okanagan River and Lake system and 2) predation on juvenile salmon in the Canadian Okanagan River and Lake system"
+title: "Habitat use and predation on juvenile Chinook Salmon in the Canadian Okanagan River and Lake system"
 output-file: "2442.html"
 Leads: "Lauren Weir"
 toc: true
